# hw

./: .gitignore  main  main.cpp
Week1/task1/src/: task1.cpp
Week1/task2/src/: task2.cpp
Week1/task3/src/: task3.cpp
Week2/task1/task1_1/: Makefile  build.sh
Week2/task1/task1_1/include/: Keyboard.hpp  User.hpp
Week2/task1/task1_1/src/: Keyboard.cpp  User.cpp  main.cpp
Week2/task1/task1_2/: Makefile  build.sh
Week2/task1/task1_2/include/: Octagon.hpp
Week2/task1/task1_2/src/: Octagon.cpp  main.cpp
Week2/task1_1/src/: task1_1.cpp
Week2/task1_2/src/: task1_2.cpp
Week2/task2/task2_1/: Makefile  build.sh  run.sh
Week2/task2/task2_1/include/: Student.hpp
Week2/task2/task2_1/src/: Student.cpp  main.cpp
Week2/task2/task2_2/: Makefile  build.sh
Week2/task2/task2_2/include/: BankAccount.hpp
Week2/task2/task2_2/src/: BankAccount.cpp  main.cpp
Week2/task2_1/src/: task2_1.cpp
Week2/task2_2/src/: task2_2.cpp
Week2/task3/task3_1/: Makefile  build.sh
Week2/task3/task3_1/include/: Author.hpp  Book.hpp
Week2/task3/task3_1/src/: Author.cpp  Book.cpp  main.cpp
Week2/task3/task3_2/: Makefile  build.sh  run.sh
Week2/task3/task3_2/include/: Car.hpp  Engine.hpp  Passenger.hpp
Week2/task3/task3_2/src/: Car.cpp  Engine.cpp  Passenger.cpp  main.cpp
Week2/task3_1/src/: task3_1.cpp
Week2/task3_2/src/: task3_2.cpp
Week3/task1/task1_A/: Makefile
Week3/task1/task1_A/include/: age.hpp
Week3/task1/task1_A/src/: age.cpp  main.cpp
Week3/task1/task1_B/: Makefile
Week3/task1/task1_B/include/: year.hpp
Week3/task1/task1_B/src/: main.cpp  year.cpp
Week3/task1/task1_C/: Makefile
Week3/task1/task1_C/include/: weather.hpp
Week3/task1/task1_C/src/: main.cpp  weather.cpp
Week3/task2/task2_A/: Makefile
Week3/task2/task2_A/include/: height.hpp
Week3/task2/task2_A/src/: height.cpp  main.cpp
Week3/task2/task2_B/: Makefile
Week3/task2/task2_B/include/: heron.hpp
Week3/task2/task2_B/src/: heron.cpp  main.cpp
Week3/task2/task2_C/: Makefile
Week3/task2/task2_C/include/: array.hpp
Week3/task2/task2_C/src/: array.cpp  main.cpp
Week3/task3/task3_A/: Makefile
Week3/task3/task3_A/include/: arrmax.hpp
Week3/task3/task3_A/src/: arrmax.cpp  main.cpp
Week3/task3/task3_B/: Makefile
Week3/task3/task3_B/include/: merge_sort.hpp
Week3/task3/task3_B/src/: main.cpp  merge_sort.cpp
Week3/task3/task3_C/: Makefile
Week3/task3/task3_C/include/: bubblesort.hpp  median.hpp
Week3/task3/task3_C/src/: bubblesort.cpp  main.cpp  median.cpp
Week4/task1/task1_A/: Makefile
Week4/task1/task1_A/include/: counter.hpp
Week4/task1/task1_B/: Makefile
Week4/task2/task2_A/: Makefile
week10/: CMakeLists.txt  Makefile
week10/include/: Stack.hpp
week10/src/: Stack.cpp  main.cpp
week10/tests/: test.cpp
week11/task1/: CMakeLists.txt
week11/task1/include/: trapezoid_area.hpp
week11/task1/src/: main.cpp  trapezoid_area.cpp
week11/task2/: CMakeLists.txt  Makefile
week11/task2/include/: entropy_calculator.hpp
week11/task2/src/: entropy_calculator.cpp  main.cpp
week12/task1/: Makefile
week12/task2/: Makefile
week12/task2/include/: password.hpp
week12/task2/src/: main.cpp  password.cpp
week13/: Dockerfile
week13/task1/: CMakeLists.txt
week13/task1/include/: number.hpp
week13/task1/src/: main.cpp  number.cpp
week13/task2/: CMakeLists.txt  Makefile
week13/task2/include/: password.hpp
week13/task2/src/: main.cpp  password.cpp
week14/client/: CMakeLists.txt  Makefile
week14/client/src/: client.cpp
week14/server/: CMakeLists.txt  Makefile
week14/server/include/: function.hpp  server.hpp
week14/server/src/: function.cpp  main.cpp  server.cpp
week15/: run.sh
week15/client/: CMakeLists.txt  Makefile  comp.sh
week15/client/src/: client.cpp  client.hpp
week15/server/: CMakeLists.txt  Makefile
week15/server/include/: server.hpp
week15/server/src/: main.cpp  server.cpp
week5/task1/task1_A/: Makefile  run.sh
week5/task1/task1_B/: run.sh
week5/task1/task1_C/: Makefile  run.sh
week5/task2/task2_A/: Makefile
week6/task1/task1_A/: Makefile  run.sh
week6/task1/task1_B/: Makefile
week6/task2/task2_A/: Makefile
week6/task2/task2_B/: Makefile
week6/task3/task3_A/: Makefile
week6/task3/task3_B/: Makefile
week7/task1/: Makefile
week7/task1/include/: mostFrequentChar.hpp
week7/task1/src/: main.cpp  mostFrequentChar.cpp
week7/task2/: Makefile
week7/task2/include/: createDate.h
week7/task2/src/: createDate.cpp  main.cpp
week7/task3/: Makefile
week7/task3/include/: searchFiles.hpp
week7/task3/src/: main.cpp  searchFiles.cpp
week8/: CMakeLists.txt  Makefile
week8/include/: fibonacci.hpp
week8/src/: fibonacci.cpp  main.cpp
week9/: CMakeLists.txt  Makefile
week9/include/: fibonacci.hpp
week9/src/: fibonacci.cpp  main.cpp
week9/tests/: fibonacci_test.cpp
(+43 files in other folders)
